Update windows_start.bat