@@ -16,7 +16,7 @@ PORT=8080
 export LANG=en_US.UTF-8
 
 cd $DIRNAME/bin
-export SUN_VM='-server -XX:MaxPermSize=128M -XX:NewRatio=2 -XX:+UseConcMarkSweepGC -XX:SoftRefLRUPolicyMSPerMB=50'
+export SUN_VM='-server -XX:MaxPermSize=128M -XX:NewRatio=4 -XX:+UseG1GC -XX:SoftRefLRUPolicyMSPerMB=500'
 export VMARGS='-Xverify:none $SUN_VM -Xmx512M -Dorg.eclipse.rwt.compression=true'
 export ARGS='-console -consolelog -registryMultiLanguage'
 #export LOGARGS='-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog'
